# aura

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPRODUCE.md  pyproject.toml
configs/: truck_run6.json
docs/: ARCHITECTURE.md  AURA_CORE_RESEARCH.md  CHATGPT_HANDOFF.md  CONVERGENCE_TODO.md  CPU_MVP.md  DATASETS.md  GALLERY.md  GPU_MVP.md  P0_CALIBRATED_CONFIDENCE.md  PRODUCTION_HANDOFF.md  ROADMAP.md  STATUS_AND_ROADMAP.md  paper_outline_2026-06-25.md  publication_bundle_2026-06-25.md  submission_readiness_2026-06-25.md
docs/engine_exports/: aura_scene.usda  aura_splat.glb
docs/schemas/: README.md  capture_manifest.schema.json  elements.schema.json  manifest.schema.json
experiments/: audit_multiscene.py  calibrate_confidence.py  collect_multiscene.py  collect_official_multiscene_baselines.py  collect_results.py  confidence_viz.py  cuda_production_backend_validation.py  dbs_beta_vs_gauss_figure.py  dbs_compactness_sweep.sh  dbs_routing_sweep.sh  dbs_truck_ablation.sh  dbs_uniform_beta.py  direct_pose_test.py  engine_integration_validation.py  external_baseline_smokes.py  geometry_prior_validation.py  gsplat_main_mcmc_smoke.py  inverse_material_validation.py  leaderboard_ablation.py  make_lineage_v2.py  make_method_diagram.py  make_p0_selection_auc_figure.py  make_pruning_sweep_gif.py  make_readme_visuals.py  mini_nerf.py  native_real_capture_validation.py  per_carrier_reliability.py  prism_ablation.py  prism_additive_validation.py  prism_benchmark.py  prism_crossfamily.py  prism_maxpush.py  prism_quality_ab.py  real_scene_fps_sweep.py  relight_demo.py  relight_fork_gif.py  render_gifs.py  render_tandt_scene_gifs.py  render_turntable.py  run_all_benchmarks.sh  (+8 more)
experiments/results/: auto.json  auto_volumetric.json  baseline_3dgs_smoke_2026-06-24.txt  benchmark.json  beta.json  combined.json  cuda_production_backend_2026-06-24.json  engine_integration_validation_2026-06-25.json  external_baseline_smokes_2026-06-24.json  external_baseline_sources_2026-06-24.json  external_baselines_2026-06-24.json  gabor.json  gaussian.json  gaussian_densify.json  gaussian_volumetric.json  geometry_prior_validation_2026-06-25.json  gsplat_main_build_probe_2026-06-25.json  gsplat_main_higs_truck_30000_2026-06-25.json  gsplat_main_mcmc_bicycle_40000_cap2m_refine40000_2026-06-25.json  gsplat_main_mcmc_bicycle_50000_cap3m_refine50000_2026-06-25.json  gsplat_main_mcmc_smoke_2026-06-25.json  gsplat_main_mcmc_stump_40000_cap2m_refine40000_2026-06-25.json  gsplat_main_mcmc_truck_30000_2026-06-25.json  multiscene.json  (+21 more)
outputs/: calib_garden.json  calib_garden_depth.json  calib_kitchen.json  calib_kitchen_depth.json  calib_room.json  calib_room_depth.json  calib_truck.json  calib_truck_depth.json  eval_run5_frames10.txt  results_run5.md
scripts/: dbs_bridge.py  eval_psnr.py  fetch_datasets.py  fetch_scene.sh  make_comparison_figure.py  make_lineage_figure.py  render_comparison.py  run_aura_vs_3dgs.py  run_baseline_3dgs.py  run_truck_coverage.sh  run_truck_gsplat.sh  watch_and_eval.sh  watch_training.py
tests/: test_allocation.py  test_assignment.py  test_baselines.py  test_benchmark.py  test_calibration.py  test_capture_manifest.py  test_capture_tensor_behavior.py  test_carrier_payloads.py  test_carrier_query.py  test_carrier_ray_query.py  test_cli_commands.py  test_cli_contract.py  test_colmap_ingest.py  test_confidence.py  test_contracts.py  test_core.py  test_coverage_gaps.py  test_cross_carrier.py  test_cuda_renderer.py  test_decomposition.py  test_depth.py  test_eval_psnr.py  test_evolution.py  test_gltf_splat.py  test_gltf_writer.py  test_gpu_smoke.py  test_gsplat_main_smoke.py  test_gsplat_renderer.py  test_hybrid.py  test_imaging.py  test_ingest_evidence.py  test_inspection.py  test_leaderboard.py  test_leaderboard_scripts.py  test_memory_stability.py  test_migration.py  test_native_demo.py  test_optimize.py  test_prism.py  test_proposals.py  (+20 more)
(+87 files in other folders)
