[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-core"
version = "0.1.0"
description = "AURA-Core native adaptive radiance reconstruction scaffold"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4"]

[project.optional-dependencies]
dev = ["pytest>=8"]
gpu = ["torch>=2.3"]

[project.scripts]
aura = "aura.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aura = ["schemas/*.schema.json"]
