[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-core"
version = "0.1.0"
description = "AURA-Core: adaptive unified radiance asset reconstruction engine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Krishi Attri", email = "krishiattriwork@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["jsonschema>=4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

[project.urls]
Homepage = "https://github.com/Archerkattri/aura"
Repository = "https://github.com/Archerkattri/aura"
Issues = "https://github.com/Archerkattri/aura/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]
gpu = ["torch>=2.3"]
assets = ["imageio>=2.34"]
sota = [
    "torch>=2.3",
    "torchvision",
    "timm>=1.0.20",
    "einops",
    "safetensors",
    "huggingface_hub",
    "opencv-python",
    "omegaconf",
    "requests",
    "pillow_heif",
    "plyfile",
    "moviepy==1.0.3",
    "trimesh",
    "e3nn",
    "addict",
    "pycolmap",
    "evo",
    "nvidia-ncore>=19.0.0",
    "usd-core",
    "torchmetrics",
    "dataclasses_json",
    "fire",
    "hydra-core",
    "kornia",
    "msgpack",
    "piexif",
    "simplejpeg",
    "scikit-learn",
    "tensorboard",
]

[project.scripts]
aura = "aura.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aura = ["schemas/*.schema.json", "cuda/*.cu", "cuda/*.cpp"]
